--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hamed
+title: Hamed Rabah
 email: hr277@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Product Manager at Microsoft Teams
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://hamedrabah.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/hitchens" # the subpath of your site, e.g. /blog
+url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
-twitter_username: hamedarabah
-github_username:  hamedrabah
+twitter_username: patdryburgh
+github_username:  patdryburgh
 
 # Build settings
 markdown: kramdown
