--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Hi, I'm Hamed
 email: hr277@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Product Manager at Microsoft Teams
-url: "https://hamedrabah.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hamedrabah.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-5121.png
 
   
