--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,26 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 title: Hamed Rabah
 email: hr277@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Product Manager at Microsoft Teams
-url: "https://hamedrabah.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+  Essays on the love of knowledge
+url: "https://hamedrabah.com" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-5121.png
 
   
@@ -38,3 +53,8 @@ hide_search: true
 #   - vendor/gems/
 #   - vendor/ruby/
 
+plugins:
+  - jekyll-paginate
+
+paginate: 3
+paginate_path: "/page/:num/"
