--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@
 title: Hamed Rabah
 email: hr277@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Essays on the love of knowledge
+  Program Manager at Microsoft Teams
 url: "https://hamedrabah.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-5121.png
 
