--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,6 @@
-- title: About
-  url: /about.html
+# - title: About
+#   url: /about.html
 
-- title: Newsletter
-  url: /newsletter.html
+# # - title: Newsletter
+# #   url: /newsletter.html
 
