--- a/_config.yml
+++ b/_config.yml
@@ -13,34 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Hamed Rabah
 email: hr277@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Program Manager at Microsoft Teams
+ Program Manager at Microsoft
 url: "https://hamedrabah.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-5121.png
+icon: /assets/images/icon-512.png
 
-  
 # Build settings
 markdown: kramdown
-show_excerpts: false
-hide_credits: true
-hide_search: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
